test/parallel/forall/task-private-vars/tpv-no-init.good
tpv-no-init.chpl:3: error: a task private variable 'z' requires a type and/or initializing expression
