test/parallel/forall/task-private-vars/tpv-no-init.chpl
var x = 5;

forall i in 1..x with (var z) {
}
